Bug 347219. File inputs and other embedded form controls in radio buttons not accessible. For chrome changes, r=mano. For mozilla/accessible changes, r=ginn.chen, sr=neil